@@ -18,6 +18,7 @@
 \RequirePackage{framed}
 \RequirePackage{color}
 \RequirePackage{fancyvrb}
+\RequirePackage{threeparttable}
 
 % Redefine these colors to your liking in the preamble.
 \definecolor{TitleColor}{rgb}{0.126,0.263,0.361}
